Added ability to push vms and then push dhcpd entries to dhcpd server For now, dhcp.template.j2 is obscured until all servers can  be templated out for mac addresses

--- a/roles/esxi-guest/tasks/main.yml
+++ b/roles/esxi-guest/tasks/main.yml
@@ -29,5 +29,7 @@
     esxi:
       datacenter: ha-datacenter
       hostname: "{{ esxihost }}"
+    vm_extra_config:
+        notes: Web Server VM
   with_items:
     - "{{ inventory_hostname }}"
