--- a/wcl-site.yml
+++ b/wcl-site.yml
@@ -1,3 +1,5 @@
 ---
 #Main playbook for local site
+#1 major assumption: We have 1 barebone vm ready to deploy cobbler to.
+#All other plays assume cobbler is installed
 - include: servers/web-servers.yml
