Added more final web names? used some local action for ssh waiting and added a more precise string check to really make sure the service is up. Also currently removed any specific container adds.

--- a/roles/cobbler-managed/handlers/main.yml
+++ b/roles/cobbler-managed/handlers/main.yml
@@ -3,7 +3,7 @@
   command: cobbler sync
 
 - name: SSH Wait
-  wait_for: host="{{ hostvars[item]['wcl_ip'] }}" port=22 delay=5 timeout=1800 state=started
+  local_action: wait_for host="{{ hostvars[item]['wcl_ip'] }}" port=22 delay=5 timeout=1800 state=started search_regex=OpenSSH
   with_items:
   - "{{ wcl_group }}"
 
