Fixed host grouping. Changed base assuptions to use docker nodes Added docker node install information

--- a/roles/docker-host/tasks/main.yml
+++ b/roles/docker-host/tasks/main.yml
@@ -2,14 +2,22 @@
 - name: Enable EPEL Repo
   yum : name=epel-release state=latest
 
+- name: Install Docker Repo
+  copy: 
+    src: docker.repo
+    dest: /etc/yum.repos.d/docker.repo
+    
 - name: Install PIP
   yum : name=python-pip state=latest
 
 - name: Install SELinux python bindings
   yum : name=libselinux-python state=latest
 
+- name: Update packages
+  yum : name=* state=latest
+
 - name: Install Docker
-  yum : name=docker-io state=latest
+  yum : name=docker-engine state=latest
 
 - name: Install Docker Python Module
   pip : name=docker-py state=latest
@@ -17,11 +25,8 @@
 - name: Install URLLIB
   pip : name=urllib3 state=latest
 
-- name: Install Docker Python Module
-  pip : name=docker-py state=latest
-
 - name   : Start Docker Service
-  service: name=docker state=started
+  service: name=docker state=started enabled=yes
 
 - include: create-users.yml
 #- include: create-directories.yml
