--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,7 +23,7 @@ sudo_user      = root
 transport      = smart
 #remote_port    = 22
 module_lang    = C
-vault_password_file = ~/.ssh/vaultpass
+#vault_password_file = ~/.ssh/vaultpass
 
 # plays will gather facts by default, which contain information about
 # the remote system.
