--- a/roles/wcl-bootstrap/tasks/main.yml
+++ b/roles/wcl-bootstrap/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
-#- name: Start etcd
-#  service: name=etcd.service state=started
+- name: Start etcd
+  become: yes
+  service: name=etcd2.service state=started
+
+- name: Start fleet
+  become: yes
+  service: name=fleet.service state=started
 
 - name: Install docker-py
   pip: name=docker-py
