Added proper undeployment process

--- a/do-undeploy.yml
+++ b/do-undeploy.yml
@@ -1,16 +1,18 @@
 ---
+- include: do-deploy.yml
+
 - name: Check DigitalOcean Nodes
   hosts: localhost
+  connection: local
   gather_facts: no
   tasks:
     - name: Remove CoreOS nodes
       digital_ocean: >
-        state=deleted
         command=droplet
-        name={{ item }}
+        id={{ item.droplet.id }}
+        state=deleted
         size_id=512mb
         region_id=sfo1
         image_id=coreos-beta
       with_items:
-        - coreos-head
-        - coreos-node1
+        - "{{ droplets.results }}"
